--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "graphql": "^15.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -23,7 +23,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "react/react-in-jsx-scope": "off"
+    }
   },
   "browserslist": {
     "production": [
